<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/download"
    tools:context=".contact_us">

    <ScrollView


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="Contact us"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:textStyle="bold" />




            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"

                android:paddingLeft="3dp"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="#30ffffff"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"

                android:paddingLeft="3dp"
                android:text="@string/contact_form_email"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/your_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="#30ffffff"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"


                android:layout_marginTop="10dp"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_subject"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />


            <EditText


                android:id="@+id/your_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="#30ffffff"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:paddingLeft="3dp"

                android:text="@string/contact_form_message"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/your_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:height="130dp"
                android:background="#30ffffff"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />/>


            <Button


                android:id="@+id/post_message"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@color/black"
                android:paddingLeft="15dp"
                android:paddingTop="1dp"
                android:paddingRight="15dp"
                android:paddingBottom="1dp"
                android:layout_marginTop="10dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>